--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "ramda": "^0.27.1",
     "react": "^17.0.2",
-    "react-native": "^0.64.1",
-    "react-native-safe-area-context": "^3.2.0"
+    "react-native": "^0.64.1"
   },
   "devDependencies": {
     "prettier": "^2.3.0"
