--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
   },
   "homepage": "https://github.com/salindersidhu/react-native-map-scale-bar#readme",
   "dependencies": {
-    "ramda": "^0.27.1",
-    "react": "^17.0.2",
-    "react-native": "^0.64.1"
+    "ramda": "^0.27.1"
   },
   "devDependencies": {
     "prettier": "^2.3.0"
