--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "*.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No test specified\""
   },
   "repository": {
     "type": "git",
