Added Prop Types dependency

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/salindersidhu/react-native-map-scale-bar#readme",
   "dependencies": {
+    "prop-types": "^15.7.2",
     "ramda": "^0.27.1"
   },
   "devDependencies": {
