--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "react-native-map-scale-bar",
   "version": "1.0.1",
   "description": "Map scale bar for React Native Mapbox GL",
-  "main": "index.js",
+  "main": "src/index.js",
   "files": [
-    "ScaleBar",
-    "Bar",
+    "src",
     "*.js"
   ],
   "scripts": {
